Fix margin on small screen size

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -88,7 +88,7 @@ a:active {
 }
 
 .cr-section-info {
-    margin: 0.675em 3em 0 0;
+    margin: 0.675em 0 0;
 }
 
 .no-js .cr-section-info {
@@ -127,5 +127,9 @@ a:active {
 @media (min-width: 1300px) {
     .cr-app {
         flex-direction: row;
+    }
+
+    .cr-section-info {
+        margin-right: 3em;
     }
 }
